--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Inflexible web site</title>
+    <title>takeIteasy - free instant file sharing service</title>
   </head>
   <body>
     <noscript>
@@ -13,5 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script src="https://kit.fontawesome.com/8dcc248daa.js" crossorigin="anonymous"></script>
   </body>
 </html>
